--- a/.travis.yml
+++ b/.travis.yml
@@ -64,14 +64,32 @@ before_script:
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
   - sudo echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz\" -O \"gtools_3.4.1.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"gdata_2.13.3.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gdata_2.13.3.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/caTools/caTools_1.17.tar.gz\" -O \"caTools_1.17.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("caTools_1.17.tar.gz", repo = NULL, type="source") }'
   - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gplots/gplots_2.14.1.tar.gz\" -O \"gplots_2.14.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots_2.14.1.tar.gz", dependencies = TRUE, repo = NULL, type="source") }'
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots_2.14.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/plyr/plyr_1.8.1.tar.gz\" -O \"plyr_1.8.1.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("plyr_1.8.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/digest/digest_0.6.4.tar.gz\" -O \"digest_0.6.4.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("digest_0.6.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gtable/gtable_0.1.2.tar.gz\" -O \"gtable_0.1.2.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gtable_0.1.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_1.4.tar.gz\" -O \"reshape2_1.4.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("reshape2_1.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/scales/scales_0.2.4.tar.gz\" -O \"scales_0.2.4.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("scales_0.2.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"proto_0.3-10.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("proto_0.3-10.tar.gz", repo = NULL, type="source") }'
   - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"ggplot2_1.0.0.tar.gz\""
-  - sudo Rscript -e 'if(!"ggplot2" %in% rownames(installed.packages())) { install.packages("ggplot2_1.0.0.tar.gz", dependencies = TRUE, repo = NULL, type="source") }'
+  - sudo Rscript -e 'if(!"ggplot2" %in% rownames(installed.packages())) { install.packages("ggplot2_1.0.0.tar.gz", repo = NULL, type="source") }'
   - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"gridExtra_0.9.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("gridExtra_0.9.1.tar.gz", dependencies = TRUE, repo = NULL, type="source") }'
+  - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("gridExtra_0.9.1.tar.gz", repo = NULL, type="source") }'
   - sh -c "wget \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\""
-  - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy_1.1.tar.gz", dependencies = TRUE, repo = NULL, type="source") }'
+  - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy_1.1.tar.gz", repo = NULL, type="source") }'
   - sudo sh -c "rm /usr/lib/R/bin/Rserve"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve.dbg"
   - sudo sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve"
