--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ matrix:
 cache:
   directories:
     - $HOME/R/Library
+    - $HOME/downloads
 
 before_script:
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
@@ -64,48 +65,48 @@ before_script:
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
   - sudo echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz\" -O \"gtools_3.4.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gtools" %in% rownames(installed.packages())) { install.packages("gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"gdata_2.13.3.tar.gz\""
-  - sudo Rscript -e 'if(!"gdata" %in% rownames(installed.packages())) { install.packages("gdata_2.13.3.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz\" -O \"bitops_1.0-6.tar.gz\""
-  - sudo Rscript -e 'if(!"bitops" %in% rownames(installed.packages())) { install.packages("bitops_1.0-6.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/caTools/caTools_1.17.tar.gz\" -O \"caTools_1.17.tar.gz\""
-  - sudo Rscript -e 'if(!"caTools" %in% rownames(installed.packages())) { install.packages("caTools_1.17.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gplots/gplots_2.14.1.tar.gz\" -O \"gplots_2.14.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots_2.14.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/Rcpp/Rcpp_0.11.2.tar.gz\" -O \"Rcpp_0.11.2.tar.gz\""
-  - sudo Rscript -e 'if(!"Rcpp" %in% rownames(installed.packages())) { install.packages("Rcpp_0.11.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/plyr/plyr_1.8.1.tar.gz\" -O \"plyr_1.8.1.tar.gz\""
-  - sudo Rscript -e 'if(!"plyr" %in% rownames(installed.packages())) { install.packages("plyr_1.8.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/digest/digest_0.6.4.tar.gz\" -O \"digest_0.6.4.tar.gz\""
-  - sudo Rscript -e 'if(!"digest" %in% rownames(installed.packages())) { install.packages("digest_0.6.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gtable/gtable_0.1.2.tar.gz\" -O \"gtable_0.1.2.tar.gz\""
-  - sudo Rscript -e 'if(!"gtable" %in% rownames(installed.packages())) { install.packages("gtable_0.1.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/stringr/stringr_0.6.2.tar.gz\" -O \"stringr_0.6.2.tar.gz\""
-  - sudo Rscript -e 'if(!"stringr" %in% rownames(installed.packages())) { install.packages("stringr_0.6.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_1.4.tar.gz\" -O \"reshape2_1.4.tar.gz\""
-  - sudo Rscript -e 'if(!"reshape2" %in% rownames(installed.packages())) { install.packages("reshape2_1.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/RColorBrewer/RColorBrewer_1.0-5.tar.gz\" -O \"RColorBrewer_1.0-5.tar.gz\""
-  - sudo Rscript -e 'if(!"RColorBrewer" %in% rownames(installed.packages())) { install.packages("RColorBrewer_1.0-5.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz\" -O \"dichromat_2.0-0.tar.gz\""
-  - sudo Rscript -e 'if(!"dichromat" %in% rownames(installed.packages())) { install.packages("dichromat_2.0-0.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/colorspace/colorspace_1.2-4.tar.gz\" -O \"colorspace_1.2-4.tar.gz\""
-  - sudo Rscript -e 'if(!"colorspace" %in% rownames(installed.packages())) { install.packages("colorspace_1.2-4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/munsell/munsell_0.4.2.tar.gz\" -O \"munsell_0.4.2.tar.gz\""
-  - sudo Rscript -e 'if(!"munsell" %in% rownames(installed.packages())) { install.packages("munsell_0.4.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/labeling/labeling_0.2.tar.gz\" -O \"labeling_0.2.tar.gz\""
-  - sudo Rscript -e 'if(!"labeling" %in% rownames(installed.packages())) { install.packages("labeling_0.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/scales/scales_0.2.4.tar.gz\" -O \"scales_0.2.4.tar.gz\""
-  - sudo Rscript -e 'if(!"scales" %in% rownames(installed.packages())) { install.packages("scales_0.2.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"proto_0.3-10.tar.gz\""
-  - sudo Rscript -e 'if(!"proto" %in% rownames(installed.packages())) { install.packages("proto_0.3-10.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"ggplot2_1.0.0.tar.gz\""
-  - sudo Rscript -e 'if(!"ggplot2" %in% rownames(installed.packages())) { install.packages("ggplot2_1.0.0.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"gridExtra_0.9.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("gridExtra_0.9.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\""
-  - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy_1.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz\" -O \"downloads/gtools_3.4.1.tar.gz\""
+  - sudo Rscript -e 'if(!"gtools" %in% rownames(installed.packages())) { install.packages("downloads/gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"downloads/gdata_2.13.3.tar.gz\""
+  - sudo Rscript -e 'if(!"gdata" %in% rownames(installed.packages())) { install.packages("downloads/gdata_2.13.3.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz\" -O \"downloads/bitops_1.0-6.tar.gz\""
+  - sudo Rscript -e 'if(!"bitops" %in% rownames(installed.packages())) { install.packages("downloads/bitops_1.0-6.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/caTools/caTools_1.17.tar.gz\" -O \"downloads/caTools_1.17.tar.gz\""
+  - sudo Rscript -e 'if(!"caTools" %in% rownames(installed.packages())) { install.packages("downloads/caTools_1.17.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/gplots/gplots_2.14.1.tar.gz\" -O \"downloads/gplots_2.14.1.tar.gz\""
+  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("downloads/gplots_2.14.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/Rcpp/Rcpp_0.11.2.tar.gz\" -O \"downloads/Rcpp_0.11.2.tar.gz\""
+  - sudo Rscript -e 'if(!"Rcpp" %in% rownames(installed.packages())) { install.packages("downloads/Rcpp_0.11.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/plyr/plyr_1.8.1.tar.gz\" -O \"downloads/plyr_1.8.1.tar.gz\""
+  - sudo Rscript -e 'if(!"plyr" %in% rownames(installed.packages())) { install.packages("downloads/plyr_1.8.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/digest/digest_0.6.4.tar.gz\" -O \"downloads/digest_0.6.4.tar.gz\""
+  - sudo Rscript -e 'if(!"digest" %in% rownames(installed.packages())) { install.packages("downloads/digest_0.6.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/gtable/gtable_0.1.2.tar.gz\" -O \"downloads/gtable_0.1.2.tar.gz\""
+  - sudo Rscript -e 'if(!"gtable" %in% rownames(installed.packages())) { install.packages("downloads/gtable_0.1.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/stringr/stringr_0.6.2.tar.gz\" -O \"downloads/stringr_0.6.2.tar.gz\""
+  - sudo Rscript -e 'if(!"stringr" %in% rownames(installed.packages())) { install.packages("downloads/stringr_0.6.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_1.4.tar.gz\" -O \"downloads/reshape2_1.4.tar.gz\""
+  - sudo Rscript -e 'if(!"reshape2" %in% rownames(installed.packages())) { install.packages("downloads/reshape2_1.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/RColorBrewer/RColorBrewer_1.0-5.tar.gz\" -O \"downloads/RColorBrewer_1.0-5.tar.gz\""
+  - sudo Rscript -e 'if(!"RColorBrewer" %in% rownames(installed.packages())) { install.packages("downloads/RColorBrewer_1.0-5.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz\" -O \"downloads/dichromat_2.0-0.tar.gz\""
+  - sudo Rscript -e 'if(!"dichromat" %in% rownames(installed.packages())) { install.packages("downloads/dichromat_2.0-0.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/colorspace/colorspace_1.2-4.tar.gz\" -O \"downloads/colorspace_1.2-4.tar.gz\""
+  - sudo Rscript -e 'if(!"colorspace" %in% rownames(installed.packages())) { install.packages("downloads/colorspace_1.2-4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/munsell/munsell_0.4.2.tar.gz\" -O \"downloads/munsell_0.4.2.tar.gz\""
+  - sudo Rscript -e 'if(!"munsell" %in% rownames(installed.packages())) { install.packages("downloads/munsell_0.4.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/labeling/labeling_0.2.tar.gz\" -O \"downloads/labeling_0.2.tar.gz\""
+  - sudo Rscript -e 'if(!"labeling" %in% rownames(installed.packages())) { install.packages("downloads/labeling_0.2.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/scales/scales_0.2.4.tar.gz\" -O \"downloads/scales_0.2.4.tar.gz\""
+  - sudo Rscript -e 'if(!"scales" %in% rownames(installed.packages())) { install.packages("downloads/scales_0.2.4.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"downloads/proto_0.3-10.tar.gz\""
+  - sudo Rscript -e 'if(!"proto" %in% rownames(installed.packages())) { install.packages("downloads/proto_0.3-10.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"downloads/ggplot2_1.0.0.tar.gz\""
+  - sudo Rscript -e 'if(!"ggplot2" %in% rownames(installed.packages())) { install.packages("downloads/ggplot2_1.0.0.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"downloads/gridExtra_0.9.1.tar.gz\""
+  - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("downloads/gridExtra_0.9.1.tar.gz", repo = NULL, type="source") }'
+  - sh -c "wget -nc \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"downloads/psy_1.1.tar.gz\""
+  - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("downloads/psy_1.1.tar.gz", repo = NULL, type="source") }'
   - sudo sh -c "rm /usr/lib/R/bin/Rserve"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve.dbg"
   - sudo sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve"
@@ -121,11 +122,11 @@ before_script:
 
 script:
   - sh -c "if [ '$COVERALLS' = 1 ]; then cd ./app; fi;"
-  - sh -c "if [ '$COVERALLS' = 1 ]; then cd Vendor/bin/cake test app All --stderr --coverage-clover ../build/logs/clover.xml --configuration ../phpunit.xml; fi;"
+  - sh -c "if [ '$COVERALLS' = 1 ]; then Vendor/bin/cake test app All --stderr --coverage-clover ../build/logs/clover.xml --configuration ../phpunit.xml; fi;"
   - sh -c "if [ '$COVERALLS' = 1 ]; then cd ..; fi;"
   - sh -c "if [ '$PHPCS' = '1' ]; then app/Vendor/bin/phpcs -p --extensions=php --standard=CakePHP --ignore=Plugin --ignore=Vendor --ignore=webroot/js/ckeditor -n ./app; fi;"
   - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then cd ./app; fi"
-  - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then cd Vendor/bin/cake test app All --stderr; fi"
+  - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then Vendor/bin/cake test app All --stderr; fi"
   - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then cd ..; fi"
   - sh -c "if [ '$LINTR' = '1' ]; then ./bin/travis-linter.sh; fi"
 after_success:
